# QT_ffmpeg

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  xmake.lua
Headers/: encode_Pcm.h  lyrices.h  mainwindow.h  netinfo_get.h  yuv_processing.h
code/: encode_Pcm.cpp  lyrics.cpp  mainwindow.cpp  netinfo_get.cpp  yuv_processing.cpp
temp/: audio.aac
ui/: ffmpeg.qrc  ffpemg_player.h  ffpemg_player.ui
